--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,10 +4,22 @@ on:
   push:
     branches:
       - "main"
+    paths:
+      - './**'
+      - '!./README.md/**'
   pull_request:
     branches:
       - "main"
+    paths:
+      - './**'
+      - '!./README.md/**'
+
   workflow_dispatch:
+
+defaults:
+  run:
+    shell: bash
+    working-directory: ./app
 
 jobs:
   hello:
