--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,14 +5,14 @@ on:
     branches:
       - "main"
     paths:
-      - './**'
-      - '!./README.md/**'
+      - "./**"
+      - "!./README.md"
   pull_request:
     branches:
       - "main"
     paths:
-      - './**'
-      - '!./README.md/**'
+      - "./**"
+      - "!./README.md"
 
   workflow_dispatch:
 
@@ -22,18 +22,88 @@ defaults:
     working-directory: ./
 
 jobs:
-  hello:
+  build-frontend:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: hello
-        run: echo "hello"
-        shell: bash
+      - name: checkout code
+        uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20.x"
+          cache: "npm"
+          cache-dependency-path: |
+            frontend/package-lock.json
+      - name: Install dependencies and run build
+        working-directory: frontend
+        run: |
+          npm ci
+          npm run build
 
-  word:
+  test-frontend:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: world
-        run: echo "world"
-        shell: bash
+      - name: checkout code
+        uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20.x"
+      - name: Install dependencies and run test
+        working-directory: frontend
+        run: |
+          npm ci
+          npm run test
+
+  test-backend:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20.x"
+      - name: Install dependencies and run test
+        working-directory: backend
+        run: |
+          npm ci
+          npm run test
+
+  scan-frontend:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20.x"
+      - name: Install dependencies and run scan
+        working-directory: frontend
+        run: |
+          npm audit fix --force
+          npm audit fix
+          npm install --save-dev html-webpack-plugin@5.5.0
+          npm update
+          npm audit fix --audit-level=critical --force
+          npm audit --audit-level=critical
+
+  scan-backend:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20.x"
+      - name: Install dependencies and run scan
+        working-directory: backend
+        run: |
+          npm audit fix --force
+          npm audit fix
+          npm install --save-dev html-webpack-plugin@5.5.0
+          npm update
+          npm audit fix --audit-level=critical --force
+          npm audit --audit-level=critical
