--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,16 @@
-name: hello world
-
 on:
   push:
     branches:
       - "main"
     paths:
-      - "./**"
-      - "!./README.md"
+      - "**/*"
+      - "!**/README.md"
   pull_request:
     branches:
       - "main"
     paths:
-      - "./**"
-      - "!./README.md"
-
+      - "**/*"
+      - "!**/README.md"
   workflow_dispatch:
 
 defaults:
@@ -25,85 +22,91 @@ jobs:
   build-frontend:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout code
+      - name: Checkout code
         uses: actions/checkout@v4
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "20.x"
-          cache: "npm"
-          cache-dependency-path: |
-            frontend/package-lock.json
-      - name: Install dependencies and run build
+      - name: Cache dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.OS }}-node-
+      - name: Install dependencies
         working-directory: frontend
-        run: |
-          npm ci
-          npm run build
+        run: npm ci
+      - name: Build frontend
+        run: npm run build
 
   test-frontend:
+    needs: build-frontend
     runs-on: ubuntu-latest
     steps:
-      - name: checkout code
+      - name: Checkout code
         uses: actions/checkout@v4
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "20.x"
-      - name: Install dependencies and run test
+      - name: Restore dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
+      - name: Run tests
         working-directory: frontend
-        run: |
-          npm ci
-          npm run test
+        run: npm run test
+      - name: Run Security Scans
+        uses: ./security-script.sh
+        continue-on-error: true
 
   test-backend:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout code
+      - name: Checkout code
         uses: actions/checkout@v4
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "20.x"
-      - name: Install dependencies and run test
+      - name: Run tests
         working-directory: backend
-        run: |
-          npm ci
-          npm run test
+        run: npm run test
+        continue-on-error: true
+      - name: Run Security Scans
+        uses: ./security-script.sh
 
-  scan-frontend:
+  push_to_registry:
+    needs: [build-frontend, test-frontend, test-backend]
+    name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
     steps:
-      - name: checkout code
+      - name: Check out the repo
         uses: actions/checkout@v4
-      - name: Use Node.js
-        uses: actions/setup-node@v4
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
         with:
-          node-version: "20.x"
-      - name: Install dependencies and run scan
-        working-directory: frontend
-        run: |
-          npm audit fix --force
-          npm audit fix
-          npm install --save-dev html-webpack-plugin@5.5.0
-          npm update
-          npm audit fix --audit-level=critical --force
-          npm audit --audit-level=critical
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-  scan-backend:
-    runs-on: ubuntu-latest
-    steps:
-      - name: checkout code
-        uses: actions/checkout@v4
-      - name: Use Node.js
-        uses: actions/setup-node@v4
+      - name: Build Frontend and push Docker image
+        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
-          node-version: "20.x"
-      - name: Install dependencies and run scan
-        working-directory: backend
-        run: |
-          npm audit fix --force
-          npm audit fix
-          npm install --save-dev html-webpack-plugin@5.5.0
-          npm update
-          npm audit fix --audit-level=critical --force
-          npm audit --audit-level=critical
+          context: ./frontend
+          file: ./frontend/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.FRONTEND_IMAGE }}/v1
+          
+      - name: Build backend and push Docker image
+        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+        with:
+          context: ./backend
+          file: ./backend/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.BACKEND_IMAGE }}/v1
