--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,4 @@
+name: Build Pipeline
 on:
   push:
     branches:
@@ -36,7 +37,7 @@ jobs:
           restore-keys: |
             ${{ runner.OS }}-node-
       - name: Install dependencies
-        working-directory: frontend
+        working-directory: ./frontend
         run: npm ci
       - name: Build frontend
         run: npm run build
@@ -57,7 +58,7 @@ jobs:
           path: ~/.npm
           key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
       - name: Run tests
-        working-directory: frontend
+        working-directory: ./frontend
         run: npm run test
       - name: Run Security Scans
         uses: ./security-script.sh
@@ -73,7 +74,7 @@ jobs:
         with:
           node-version: "20.x"
       - name: Run tests
-        working-directory: backend
+        working-directory: ./backend
         run: npm run test
         continue-on-error: true
       - name: Run Security Scans
