--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,8 +37,9 @@ jobs:
           restore-keys: |
             ${{ runner.OS }}-node-
       - name: Install dependencies
-        working-directory: ./frontend
-        run: npm ci
+        run: |
+          cd frontend
+          npm ci
       - name: Build frontend
         run: npm run build
 
@@ -58,8 +59,9 @@ jobs:
           path: ~/.npm
           key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
       - name: Run tests
-        working-directory: ./frontend
-        run: npm run test
+        run: |
+          cd frontend
+          npm run test
       - name: Run Security Scans
         uses: ./security-script.sh
         continue-on-error: true
@@ -74,8 +76,9 @@ jobs:
         with:
           node-version: "20.x"
       - name: Run tests
-        working-directory: ./backend
-        run: npm run test
+        run: |
+          cd backend
+          npm run test
         continue-on-error: true
       - name: Run Security Scans
         uses: ./security-script.sh
