--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd frontend
+          npm cache clean --force
           npm ci
       - name: Build frontend
         run: npm run build
