--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,12 +60,14 @@ jobs:
           key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
       - name: Run tests
         run: |
-          cd frontend
-          npm run test
+         npm run test --prefix frontend
       - name: Run Security Scans
         run: |
-          chmod +x security-script.sh
-          ./security-script.sh
+          npm audit fix --prefix frontend
+          npm install --save-dev html-webpack-plugin@5.5.0 --prefix frontend
+          npm update --prefix frontend
+          npm audit fix --audit-level=critical --force --prefix frontend
+          npm audit --audit-level=critical --prefix frontend
         continue-on-error: true
 
   test-backend:
@@ -77,15 +79,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20.x"
-      - name: Run tests
-        run: |
-          cd backend
-          npm run test
         continue-on-error: true
       - name: Run Security Scans
         run: |
-          chmod +x security-script.sh
-          ./security-script.sh
+          npm audit fix --prefix backend
+          npm install --save-dev html-webpack-plugin@5.5.0 --prefix backend
+          npm update --prefix backend
+          npm audit fix --audit-level=critical --force --prefix backend
+          npm audit --audit-level=critical --prefix backend
 
   push_to_registry:
     needs: [build-frontend, test-frontend, test-backend]
