--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,17 @@
 name: Build Pipeline
 on:
-  push:
-    branches:
-      - "main"
-    paths:
-      - "**/*"
-      - "!**/README.md"
-  pull_request:
-    branches:
-      - "main"
-    paths:
-      - "**/*"
-      - "!**/README.md"
+  # push:
+  #   branches:
+  #     - "main"
+  #   paths:
+  #     - "**/*"
+  #     - "!**/README.md"
+  # pull_request:
+  #   branches:
+  #     - "main"
+  #   paths:
+  #     - "**/*"
+  #     - "!**/README.md"
   workflow_dispatch:
 
 defaults:
