--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,17 +1,11 @@
 name: Build Pipeline
 on:
-  # push:
-  #   branches:
-  #     - "main"
-  #   paths:
-  #     - "**/*"
-  #     - "!**/README.md"
-  # pull_request:
-  #   branches:
-  #     - "main"
-  #   paths:
-  #     - "**/*"
-  #     - "!**/README.md"
+  push:
+    branches:
+      - "build"
+    paths:
+      - "**/*"
+      - "!**/README.md"
   workflow_dispatch:
 
 defaults:
@@ -25,10 +19,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "20.x"
+
       - name: Cache dependencies
         uses: actions/cache@v4
         with:
@@ -36,9 +32,11 @@ jobs:
           key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.OS }}-node-
+
       - name: Install dependencies
         run: |
           npm ci --prefix frontend
+          
       - name: Build frontend
         run: |
           npm run build --prefix frontend
@@ -49,19 +47,23 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "20.x"
+
       - name: Restore dependencies
         uses: actions/cache@v4
         with:
           path: ~/.npm
           key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
+
       # - name: Run tests
       #   run: |
       #     npm i jest
       #     npm run test --prefix frontend
+
       - name: Run Security Scans
         run: |
           npm audit fix --prefix frontend
@@ -69,18 +71,18 @@ jobs:
           npm update --prefix frontend
           npm audit fix --audit-level=critical --force --prefix frontend
           npm audit --audit-level=critical --prefix frontend
-        # continue-on-error: true
 
   test-backend:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "20.x"
-        # continue-on-error: true
+          
       - name: Run Security Scans
         run: |
           npm audit fix --prefix backend
@@ -96,9 +98,11 @@ jobs:
     permissions:
       packages: write
       contents: read
+
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
+
       - name: Log in to Docker Hub
         uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
         with:
