--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -1,12 +1,13 @@
 name: Docker Image Vulnerability Scan
 
 on:
-  schedule:
-    - cron: '0 12 * * *' ##Detect your docker image vulnerability everyday at 12:00 (UTC).
+  workflow_dispatch:
+  # schedule:
+  #   - cron: "0 12 * * *" ##Detect your docker image vulnerability everyday at 12:00 (UTC).
 
 jobs:
   scan:
-    name: Daily Vulnerability Scan 
+    name: Daily Vulnerability Scan
     runs-on: ubuntu-latest
     steps:
       - name: Pull Frontend Docker Image
@@ -14,7 +15,7 @@ jobs:
 
       - uses: lazy-actions/gitrivy@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.TOKEN }}
           image: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.FRONTEND_IMAGE }}:v1
 
       - name: Pull Backend Docker Imag
@@ -22,5 +23,5 @@ jobs:
 
       - uses: lazy-actions/gitrivy@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.TOKEN }}
           image: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.BACKEND_IMAGE }}:v1
