--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -5,28 +5,37 @@ on:
     branches:
       - "build"
     paths:
-      - "**/*"
+      - "**/**"
       - "!**/README.md"
   # schedule:
-  #   - cron: "0 12 * * *" ##Detect your docker image vulnerability everyday at 12:00 (UTC).
+  #   - cron: "0 12 * * *" # Detect your docker image vulnerability every day at 12:00 (UTC).
 
 jobs:
   scan:
     name: Daily Vulnerability Scan
     runs-on: ubuntu-latest
+
     steps:
       - name: Pull Frontend Docker Image
         run: docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.FRONTEND_IMAGE }}:v1
 
-      - uses: lazy-actions/gitrivy@v3
+      - name: Scan Frontend Docker Image
+        uses: aquasecurity/trivy-action@master
         with:
-          token: ${{ secrets.TOKEN }}
-          image: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.FRONTEND_IMAGE }}:v1
+          image-ref: "${{ secrets.DOCKER_USERNAME }}/${{ secrets.FRONTEND_IMAGE }}:v1"
+          exit-code: "1"
+          ignore-unfixed: true
+          vuln-type: "os,library"
+          severity: "CRITICAL,HIGH"
 
-      - name: Pull Backend Docker Imag
+      - name: Pull Backend Docker Image
         run: docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.BACKEND_IMAGE }}:v1
 
-      - uses: lazy-actions/gitrivy@v3
+      - name: Scan Backend Docker Image
+        uses: aquasecurity/trivy-action@master
         with:
-          token: ${{ secrets.TOKEN }}
-          image: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.BACKEND_IMAGE }}:v1
+          image-ref: "${{ secrets.DOCKER_USERNAME }}/${{ secrets.BACKEND_IMAGE }}:v1"
+          exit-code: "1"
+          ignore-unfixed: true
+          vuln-type: "os,library"
+          severity: "CRITICAL,HIGH"
