--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -1,8 +1,14 @@
 name: Docker Image Vulnerability Scan
 
 on:
-  schedule:
-    - cron: "0 12 * * *" # Detect your docker image vulnerability every day at 12:00 (UTC).
+  push:
+    branches:
+      - "build"
+    paths:
+      - "**/*"
+      - "!**/README.md"
+  # schedule:
+  #   - cron: "0 12 * * *" # Detect your docker image vulnerability every day at 12:00 (UTC).
 
 jobs:
   scan:
