--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,12 @@
 name: Build Pipeline
 on:
-  push:
-    branches:
-      - "build"
-    paths:
-      - "**/*"
-      - "!**/README.md"
-  # workflow_dispatch:
+  # push:
+  #   branches:
+  #     - "build"
+  #   paths:
+  #     - "**/*"
+  #     - "!**/README.md"
+  workflow_dispatch:
 
 defaults:
   run:
