--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -1,14 +1,8 @@
 name: Docker Image Vulnerability Scan
 
 on:
-  push:
-    branches:
-      - "build"
-    paths:
-      - "**/*"
-      - "!**/README.md"
-  # schedule:
-  #   - cron: "0 12 * * *" # Detect your docker image vulnerability every day at 12:00 (UTC).
+  schedule:
+    - cron: "0 12 * * *" # Detect your docker image vulnerability every day at 12:00 (UTC).
 
 jobs:
   scan:
@@ -34,7 +28,7 @@ jobs:
       - name: Scan Backend Docker Image
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: "${{ secrets.DOCKER_USERNAME }}/${{ secrets.BACKEND_IMAGE }}:v1"
+          image-ref: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.BACKEND_IMAGE }}:v1
           exit-code: "1"
           ignore-unfixed: true
           vuln-type: "os,library"
