--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -22,5 +22,5 @@ jobs:
             SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
           args: >
-              -Dsonar.organization="Michael Agbiaowei"
+              -Dsonar.organization=michaelagbiaowei
               -Dsonar.projectKey=michaelagbiaowei
