--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -3,6 +3,7 @@ name: SonarQube Pipeline
 on:
   push:
     branches:
+      - main
       - build
   pull_request:
     types: [opened, synchronize, reopened]
