--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
-sonar.projectKey=michaelagbiaowei_michaelagbiaowei
+sonar.projectKey=michaelagbiaowei_git-actions
 sonar.organization=michaelagbiaowei
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=michaelagbiaowei
+#sonar.projectName=git-actions
 #sonar.projectVersion=1.0
 
 
