--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -4,7 +4,7 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
   schedule:
-    - cron: "*/5 * * * *" # Detect your docker image vulnerability every day at 12:00 (UTC).
+    - cron: "0 12 * * *" # Detect your docker image vulnerability every day at 12:00 (UTC).
     
 jobs:
   scan:
