--- a/deploy/kubernetes/backend.deploy.yml
+++ b/deploy/kubernetes/backend.deploy.yml
@@ -1,66 +1,69 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: backend
+  name:  backend
+  namespace: default
   labels:
-    app: backend
+    app:  backend
 spec:
   selector:
     matchLabels:
       app: backend
+  replicas: 1
+  strategy:
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
+    type: RollingUpdate
   template:
     metadata:
       labels:
-        app: backend
-      annotations:
-        sidecar.istio.io/rewriteAppHTTPProbers: "true"
+        app:  backend
     spec:
-      serviceAccountName: backend
-      securityContext:
-        fsGroup: 1000
-        runAsGroup: 1000
-        runAsNonRoot: true
-        runAsUser: 1000
       containers:
-        - name: backend_server
-          securityContext:
-            allowPrivilegeEscalation: false
-            capabilities:
-              drop:
-                - ALL
-            privileged: false
-            readOnlyRootFilesystem: true
-          image: maiempire/awesome_backend:v1
-          ports:
-          - containerPort: 7000
-          readinessProbe:
-            initialDelaySeconds: 10
-            httpGet:
-              path: "/_healthz"
-              port: 7000
-              httpHeaders:
-              - name: "Cookie"
-                value: "shop_session-id=x-readiness-probe"
-          livenessProbe:
-            initialDelaySeconds: 10
-            httpGet:
-              path: "/_healthz"
-              port: 7000
-              httpHeaders:
-              - name: "Cookie"
-                value: "shop_session-id=x-liveness-probe"
-          env:
-          - name: MONGO_URI
-            value: "MONGO_URI"
-          - name: PORT
-            value: "PORT"
-          resources:
-            requests:
-              cpu: 100m
-              memory: 64Mi
-            limits:
-              cpu: 200m
-              memory: 128Mi
+      - name:  backend-server
+        image: BACKEND_IMAGE
+        resources:
+          requests:
+            cpu: 100m
+            memory: 100Mi
+          limits:
+            cpu: 100m
+            memory: 100Mi
+        livenessProbe:
+          tcpSocket:
+            port: 7000
+          initialDelaySeconds: 5
+          timeoutSeconds: 5
+          successThreshold: 1
+          failureThreshold: 3
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /_healthz
+            port: 7000
+          initialDelaySeconds: 5
+          timeoutSeconds: 2
+          successThreshold: 1
+          failureThreshold: 3
+          periodSeconds: 10
+        env:
+        - name: MONGO_URI
+          value: MONGO_URI
+        - PORT: PORT
+          value: PORT
+        ports:
+        - containerPort:  7000
+          name:  backend
+        volumeMounts:
+        - name: localtime
+          mountPath: /etc/localtime
+      volumes:
+        - name: localtime
+          hostPath:
+            path: /usr/share/zoneinfo/Africa/Lagos
+      restartPolicy: Always
+
 ---
 apiVersion: v1
 kind: Service
@@ -74,7 +77,7 @@ spec:
     app: backend
   ports:
   - name: http
-    port: 80
+    port: 7000
     targetPort: 7000
 ---
 apiVersion: v1
@@ -89,5 +92,5 @@ spec:
     app: backend
   ports:
   - name: http
-    port: 80
+    port: 7000
     targetPort: 7000
