--- a/deploy/kubernetes/frontend.deploy.yml
+++ b/deploy/kubernetes/frontend.deploy.yml
@@ -1,62 +1,47 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontend
+  name:  frontend
+  namespace: default
   labels:
-    app: frontend
+    app:  frontend
 spec:
   selector:
     matchLabels:
       app: frontend
+  replicas: 1
+  strategy:
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
+    type: RollingUpdate
   template:
     metadata:
       labels:
-        app: frontend
-      annotations:
-        sidecar.istio.io/rewriteAppHTTPProbers: "true"
+        app:  frontend
     spec:
-      serviceAccountName: frontend
-      securityContext:
-        fsGroup: 1000
-        runAsGroup: 1000
-        runAsNonRoot: true
-        runAsUser: 1000
       containers:
-        - name: frontend_server
-          securityContext:
-            allowPrivilegeEscalation: false
-            capabilities:
-              drop:
-                - ALL
-            privileged: false
-            readOnlyRootFilesystem: true
-          image: maiempire/awesome_frontend:v1
-          ports:
-          - containerPort: 80
-          readinessProbe:
-            initialDelaySeconds: 10
-            httpGet:
-              path: "/"
-              port: 80
-              httpHeaders:
-              - name: "Cookie"
-                value: "shop_session-id=x-readiness-probe"
-          livenessProbe:
-            initialDelaySeconds: 10
-            httpGet:
-              path: "/"
-              port: 80
-              httpHeaders:
-              - name: "Cookie"
-                value: "shop_session-id=x-liveness-probe"
-          resources:
-            requests:
-              cpu: 100m
-              memory: 64Mi
-            limits:
-              cpu: 200m
-              memory: 128Mi
-              
+      - name:  frontend-server
+        image:  FRONTEND_IMAGE
+        resources:
+          requests:
+            cpu: 100m
+            memory: 100Mi
+          limits:
+            cpu: 100m
+            memory: 100Mi
+        livenessProbe:
+          tcpSocket:
+            port: 80
+          initialDelaySeconds: 5
+          timeoutSeconds: 5
+          successThreshold: 1
+          failureThreshold: 3
+          periodSeconds: 10
+        ports:
+        - containerPort:  80
+          name:  frontend
+
 ---
 apiVersion: v1
 kind: Service
@@ -69,6 +54,6 @@ spec:
   selector:
     app: frontend
   ports:
-  - name: http
-    port: 8080
-    targetPort: 80
+    - name: http
+      port: 5000 #External
+      targetPort: 80 #Internal
