--- a/deploy/kubernetes/frontend.deploy.yml
+++ b/deploy/kubernetes/frontend.deploy.yml
@@ -5,6 +5,8 @@ metadata:
   namespace: default
   labels:
     app:  frontend
+  annotations:
+    sidecar.istio.io/rewriteAppHTTPProbers: "true"
 spec:
   selector:
     matchLabels:
