--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -5,9 +5,10 @@ on:
   #   branches:
   #     - main
   #     - build
-  pull_request:
-    types: [opened, synchronize, reopened]
-
+  # pull_request:
+  #   types: [opened, synchronize, reopened]
+  workflow_dispatch:
+    
 defaults:
   run:
     shell: bash
