--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -1,10 +1,11 @@
 name: Trivy Pipeline
 
 on:
-  pull_request:
-    types: [opened, synchronize, reopened]
-  schedule:
-    - cron: "0 12 * * *" # Detect your docker image vulnerability every day at 12:00 (UTC).
+  # pull_request:
+  #   types: [opened, synchronize, reopened]
+  # schedule:
+  #   - cron: "0 12 * * *" # Detect your docker image vulnerability every day at 12:00 (UTC).
+  workflow_dispatch:
     
 jobs:
   scan:
