--- a/deploy/kubernetes/backend.deploy.yml
+++ b/deploy/kubernetes/backend.deploy.yml
@@ -5,8 +5,10 @@ metadata:
   namespace: default
   labels:
     app:  backend
+  annotations:
+    sidecar.istio.io/rewriteAppHTTPProbers: "true"
 spec:
-  # serviceAccountName: frontendservice
+  # serviceAccountName: backendservice
   # terminationGracePeriodSeconds: 5
   # securityContext:
   #   fsGroup: 1000
@@ -92,6 +94,7 @@ spec:
   - name: http
     port: 7000
     targetPort: 7000
+    
 ---
 apiVersion: v1
 kind: Service
