--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,10 @@ on:
   #   paths:
   #     - "**/*"
   #     - "!**/README.md"
+  
+  # workflow_run:
+  #   workflows: ["SonarQube Pipeline"]
+  #   types: [completed]
   workflow_dispatch:
 
 defaults:
