--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -5,6 +5,10 @@ on:
   #   types: [opened, synchronize, reopened]
   # schedule:
   #   - cron: "0 12 * * *" # Detect your docker image vulnerability every day at 12:00 (UTC).
+
+  # workflow_run:
+  #   workflows: ["Build Pipeline"]
+  #   types: [completed]
   workflow_dispatch:
     
 jobs:
