--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -6,9 +6,9 @@ on:
   # schedule:
   #   - cron: "0 12 * * *" # Detect your docker image vulnerability every day at 12:00 (UTC).
 
-  # workflow_run:
-  #   workflows: ["Build Pipeline"]
-  #   types: [completed]
+  workflow_run:
+    workflows: ["Build Pipeline"]
+    types: [completed]
   workflow_dispatch:
     
 jobs:
