--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,17 @@
 FROM node:alpine3.19
 
+RUN addgroup -S nonroot \
+    && adduser -S nonroot -G nonroot
+
 WORKDIR /app
 
 COPY package*.json .
 
-RUN npm ci
+RUN npm ci --ignore-scripts
 
 COPY . .
+
+USER nonroot
 
 EXPOSE 7000
 
