--- a/deploy/kubernetes/backend.deploy.yml
+++ b/deploy/kubernetes/backend.deploy.yml
@@ -1,10 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name:  backend
+  name: backend
   namespace: default
   labels:
-    app:  backend
+    app: backend
   annotations:
     sidecar.istio.io/rewriteAppHTTPProbers: "true"
 spec:
@@ -26,7 +26,7 @@ spec:
   template:
     metadata:
       labels:
-        app:  backend
+        app: backend
     spec:
       containers:
         # securityContext:
@@ -36,48 +36,50 @@ spec:
         #       - ALL
         #   privileged: false
         #   readOnlyRootFilesystem: true
-      - name:  backend-server
-        image: BACKEND_IMAGE
-        resources:
-          requests:
-            cpu: 100m
-            memory: 100Mi
-          limits:
-            cpu: 100m
-            memory: 100Mi
-        livenessProbe:
-          tcpSocket:
-            port: 7000
-          initialDelaySeconds: 5
-          timeoutSeconds: 5
-          successThreshold: 1
-          failureThreshold: 3
-          periodSeconds: 10
-        readinessProbe:
-          httpGet:
-            path: /_healthz
-            port: 7000
-          initialDelaySeconds: 5
-          timeoutSeconds: 2
-          successThreshold: 1
-          failureThreshold: 3
-          periodSeconds: 10
-        env:
-        - name: MONGO_URI
-          value: "MONGO_URI"
-        - name: PORT
-          value: "PORT"
-        ports:
-        - containerPort:  7000
-          name:  backend
-        volumeMounts:
-        - name: localtime
-          mountPath: /etc/localtime
+        - name: backend-server
+          image: BACKEND_IMAGE
+          automountServiceAccountToken: false ##ADDED
+          resources:
+            requests:
+            #     cpu: 100m
+            #     memory: 100Mi
+            limits:
+              #     cpu: 100m
+              #     memory: 100Mi
+              ephemeral-storage: "1Gi"
+          livenessProbe:
+            tcpSocket:
+              port: 7000
+            initialDelaySeconds: 5
+            timeoutSeconds: 5
+            successThreshold: 1
+            failureThreshold: 3
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /_healthz
+              port: 7000
+            initialDelaySeconds: 5
+            timeoutSeconds: 2
+            successThreshold: 1
+            failureThreshold: 3
+            periodSeconds: 10
+          env:
+            - name: MONGO_URI
+              value: "MONGO_URI"
+            - name: PORT
+              value: "PORT"
+          ports:
+            - containerPort: 7000
+              name: backend
+          volumeMounts:
+            - mountPath: /data
+              name: data-volume
       volumes:
-        - name: localtime
+        - name: data-volume
           hostPath:
-            path: /usr/share/zoneinfo/Africa/Lagos
-      restartPolicy: Always
+            path: /mnt/nfs
+            restartPolicy: Always
 
 ---
 apiVersion: v1
@@ -91,10 +93,10 @@ spec:
   selector:
     app: backend
   ports:
-  - name: http
-    port: 7000
-    targetPort: 7000
-    
+    - name: http
+      port: 7000
+      targetPort: 7000
+
 ---
 apiVersion: v1
 kind: Service
@@ -107,6 +109,6 @@ spec:
   selector:
     app: backend
   ports:
-  - name: http
-    port: 7000
-    targetPort: 7000
+    - name: http
+      port: 7000
+      targetPort: 7000
