--- a/deploy/kubernetes/frontend.deploy.yml
+++ b/deploy/kubernetes/frontend.deploy.yml
@@ -1,10 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name:  frontend
+  name: frontend
   namespace: default
   labels:
-    app:  frontend
+    app: frontend
   annotations:
     sidecar.istio.io/rewriteAppHTTPProbers: "true"
 spec:
@@ -29,33 +29,35 @@ spec:
       #   runAsGroup: 1000
       #   runAsNonRoot: true
       containers:
-      - name: frontend-server
-        # securityContext:
-        #   allowPrivilegeEscalation: false
-        #   capabilities:
-        #     drop:
-        #       - ALL
-        #   privileged: false
-        #   readOnlyRootFilesystem: true
-        image: FRONTEND_IMAGE
-        resources:
-          requests:
-            cpu: 100m
-            memory: 100Mi
-          limits:
-            cpu: 100m
-            memory: 100Mi
-        livenessProbe:
-          tcpSocket:
-            port: 80
-          initialDelaySeconds: 5
-          timeoutSeconds: 5
-          successThreshold: 1
-          failureThreshold: 3
-          periodSeconds: 10
-        ports:
-        - containerPort:  80
-          name:  frontend
+        - name: frontend-server
+          # securityContext:
+          #   allowPrivilegeEscalation: false
+          #   capabilities:
+          #     drop:
+          #       - ALL
+          #   privileged: false
+          #   readOnlyRootFilesystem: true
+          image: FRONTEND_IMAGE
+          automountServiceAccountToken: false ##ADDED
+          resources:
+            requests:
+              cpu: 100m
+              memory: 100Mi
+            limits:
+              #     cpu: 100m
+              #     memory: 100Mi
+              ephemeral-storage: "1Gi"
+          livenessProbe:
+            tcpSocket:
+              port: 80
+            initialDelaySeconds: 5
+            timeoutSeconds: 5
+            successThreshold: 1
+            failureThreshold: 3
+            periodSeconds: 10
+          ports:
+            - containerPort: 80
+              name: frontend
 
 ---
 apiVersion: v1
