--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,13 @@
 FROM node:alpine3.19 AS BUILD
 
+RUN addgroup -S nonroot \
+    && adduser -S nonroot -G nonroot
+
 WORKDIR /com
 
 COPY package*.json .
 
-RUN npm ci
+RUN npm ci --ignore-scripts
 
 COPY . .
 
@@ -17,6 +20,8 @@ FROM nginx:alpine3.19 AS RUN
 WORKDIR /usr/share/nginx/html
 
 COPY --from=BUILD /com/dist .
+
+USER nonroot
 
 EXPOSE 80
 
